tests/invalid/annotation_constant_non_string/main.py
def main() -> None:
    x: 123 = 1
